<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".MainActivity2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_wiew3"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:background="@android:drawable/divider_horizontal_bright"
                    android:contentDescription="@string/boton4"
                    app:srcCompat="@drawable/pinar" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:background="@android:drawable/divider_horizontal_bright"
                    android:contentDescription="@string/boton5"
                    app:srcCompat="@drawable/habana" />

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:background="@android:drawable/divider_horizontal_bright"
                    android:contentDescription="@string/boton6"
                    app:srcCompat="@drawable/artemisa" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_wiew4"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_wiew5"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_wiew6"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:background="@android:drawable/divider_horizontal_bright"
                    android:contentDescription="@string/boton7"
                    app:srcCompat="@drawable/mayabeque" />

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:background="@android:drawable/divider_horizontal_bright"
                    android:contentDescription="@string/boton8"
                    app:srcCompat="@drawable/isla" />

                <ImageButton
                    android:id="@+id/imageButton6"
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:background="@android:drawable/divider_horizontal_bright"
                    android:contentDescription="@string/boton9"
                    app:srcCompat="@drawable/matanzas" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_wiew7"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_wiew8"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_wiew9"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/imageButton7"
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:background="@android:drawable/divider_horizontal_bright"
                    android:contentDescription="@string/boton10"
                    app:srcCompat="@drawable/villa" />

                <ImageButton
                    android:id="@+id/imageButton8"
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:background="@android:drawable/divider_horizontal_bright"
                    android:contentDescription="@string/boton11"
                    app:srcCompat="@drawable/cienfuegos" />

                <ImageButton
                    android:id="@+id/imageButton10"
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:background="@android:drawable/divider_horizontal_bright"
                    android:contentDescription="@string/boton12"
                    app:srcCompat="@drawable/santi" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_wiew10"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_wiew11"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_wiew12"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/imageButton11"
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:background="@android:drawable/divider_horizontal_bright"
                    android:contentDescription="@string/boton13"
                    app:srcCompat="@drawable/ciego" />

                <ImageButton
                    android:id="@+id/imageButton12"
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:background="@android:drawable/divider_horizontal_bright"
                    android:contentDescription="@string/boton14"
                    app:srcCompat="@drawable/camaguey" />

                <ImageButton
                    android:id="@+id/imageButton13"
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:background="@android:drawable/divider_horizontal_bright"
                    android:contentDescription="@string/boton15"
                    app:srcCompat="@drawable/tunas" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_wiew13"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_wiew14"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_wiew15"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/imageButton14"
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:background="@android:drawable/divider_horizontal_bright"
                    android:contentDescription="@string/boton16"
                    app:srcCompat="@drawable/holguin" />

                <ImageButton
                    android:id="@+id/imageButton15"
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:background="@android:drawable/divider_horizontal_bright"
                    android:contentDescription="@string/boton17"
                    app:srcCompat="@drawable/granma" />

                <ImageButton
                    android:id="@+id/imageButton16"
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:background="@android:drawable/divider_horizontal_bright"
                    android:contentDescription="@string/boton18"
                    app:srcCompat="@drawable/santiago" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_wiew16"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_wiew17"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_wiew18"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/imageButton17"
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:background="@android:drawable/divider_horizontal_bright"
                    android:contentDescription="@string/boton19"
                    app:srcCompat="@drawable/guantanamo" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_wiew19"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>