<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="40dp"
        android:text="@string/boton1"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Text_nombre"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="name"
        android:background="@drawable/rectangulob"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:labelFor="@id/Text_nombre"
        android:maxLength="25"
        android:hint="@string/text"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/Text_provincia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/Text_provincia"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:autofillHints="name"
        android:background="@drawable/rectangulob"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:labelFor="@id/Text_provincia"
        android:maxLength="20"
        android:hint="@string/text2"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/inicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/Img_logo"
        android:layout_width="306dp"
        android:layout_height="278dp"
        android:layout_margin="16dp"
        android:background="@drawable/logo"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>